# TinyJS

./: .gitignore  AST.cpp  AST.hpp  BinaryOperation.cpp  BinaryOperation.hpp  ByteCodeStream.hpp  CMakeLists.txt  CommonString.cpp  CommonString.hpp  ConstStrings.cpp  ConstStrings.hpp  Expression.cpp  Expression.hpp  IJsObject.cpp  IJsObject.hpp  InstructionOutputStream.cpp  InstructionOutputStream.hpp  JsArguments.cpp  JsArguments.hpp  JsArray.cpp  JsArray.hpp  JsLibObject.cpp  JsLibObject.hpp  JsObjectFunction.cpp  JsObjectFunction.hpp  JsRegExp.cpp  JsRegExp.hpp  JsString.hpp  Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  StringPool.cpp  StringPool.hpp  VMRuntime.cpp  VMRuntime.hpp  VirtualMachine.cpp  VirtualMachine.hpp  VirtualMachineTypes.cpp  VirtualMachineTypes.hpp  (+1 more)
Built-in/: Array.cpp  Boolean.cpp  BuiltIn.cpp  BuiltIn.hpp  Error.cpp  Function.cpp  Number.cpp  Object.cpp  Object.hpp  RegExp.cpp  String.cpp  Symbol.cpp  eval.cpp
TinyJS.xcodeproj/: project.pbxproj
WebAPI/: Console.cpp  Console.hpp  WebAPI.cpp  WebAPI.hpp
api-built-in/: Array.cpp  Boolean.cpp  BuiltIn.cpp  BuiltIn.hpp  Date.cpp  Error.cpp  Function.cpp  JSON.cpp  Math.cpp  Number.cpp  Object.cpp  Promise.cpp  Reflect.cpp  RegExp.cpp  String.cpp  String.hpp  Symbol.cpp  eval.cpp
api-web/: Console.cpp  WebAPI.cpp  WebAPI.hpp  Window.cpp
build-script/: ConstStrings.py  build.py
interpreter/: Arguments.cpp  Arguments.hpp  BinaryOperation.hpp  PromiseTasks.cpp  PromiseTasks.hpp  TimerTasks.cpp  TimerTasks.hpp  UnaryOperation.hpp  VMRuntime.cpp  VMRuntime.hpp  VMRuntimeCommon.cpp  VMRuntimeCommon.hpp  VMScope.cpp  VMScope.hpp  VirtualMachine.cpp  VirtualMachine.hpp  VirtualMachineTypes.cpp  VirtualMachineTypes.hpp
objects/: IJsIterator.cpp  IJsIterator.hpp  IJsObject.cpp  IJsObject.hpp  JsArguments.cpp  JsArguments.hpp  JsArray.cpp  JsArray.hpp  JsDummyObject.hpp  JsGlobalThis.cpp  JsGlobalThis.hpp  JsLibObject.cpp  JsLibObject.hpp  JsObject.cpp  JsObject.hpp  JsObjectFunction.cpp  JsObjectFunction.hpp  JsObjectLazy.cpp  JsObjectLazy.hpp  JsObjectX.cpp  JsObjectX.hpp  JsPrimaryObject.cpp  JsPrimaryObject.hpp  JsPromiseObject.cpp  JsPromiseObject.hpp  JsRegExp.cpp  JsRegExp.hpp
parser/: ByteCodeStream.cpp  ByteCodeStream.hpp  Expression.cpp  Expression.hpp  Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  ParserTypes.cpp  ParserTypes.hpp  Statement.cpp  Statement.hpp
strings/: CommonString.cpp  CommonString.hpp  JsString.cpp  JsString.hpp  StringPool.cpp  StringPool.hpp
test-cases/: Object.js  argument.js  const.js  eval.js  eval_scope.js  function.js  function_default_parameters.js  object_literal.js  string.js  to_string.js  var_declare.js
test-cases/check_output/: Date.js  Function.js  JSON.js  Math.js  Number.js  Object.create.js  Object.freeze.js  Object.is.js  Object.isPrototypeOf.js  Object.isSealed.js  Object.js  Promise.js  Reflect.js  RegExp.js  String.js  argument.js  arithmetic-add.js  arithmetic-div.js  arithmetic-exp.js  arithmetic-mod.js  arithmetic-mul.js  arithmetic-sub.js  array.js  arrow_function.js  assign.js  bit-and.js  bit-not.js  bit-or.js  bit-xor.js  conditional-nullish.js  const.js  equal.js  equal_strict.js  for.js  generate_output.py  globalThis.js  id_name.js  in.js  increament_id.js  increament_member_dot.js  (+30 more)
test-cases/check_output/not_supported/: array.js  async.js  const.js  eval.js  eval_scope.js  id_name.js  new.js  prototype.js  to_string.js  var_declare.js
unittest/: JsArray.cpp  Lexer.cpp  RunJavaScript.cpp
unittest/objects/: JsArray.cpp
unittest/parser/: Lexer.cpp  Parser.cpp
unittest/utils/: CharEncoding.cpp  DateTime.cpp  SizedString.cpp  StringView.cpp
utils/: AllocatorPool.cpp  AllocatorPool.h  Base64.cpp  BinaryFileStream.cpp  BinaryFileStream.h  BinaryStream.cpp  BinaryStream.h  CharEncoding.cpp  CharEncoding.h  DateTime.cpp  DateTime.h  FileApi.cpp  FileApi.h  Hash.cpp  Hash.h  LinkedString.cpp  LinkedString.hpp  SizedString.cpp  SizedString.h  StringEx.cpp  StringEx.h  StringParser.cpp  StringParser.hpp  StringView.cpp  StringView.h  Utils.h  UtilsTypes.h  XCharSeparatedValues.cpp  XCharSeparatedValues.h  base64.h  os.cpp  os.h  unittest.cpp  unittest.h
utils/linux/: CharEncodingLinux.cpp
utils/mac/: CharEncodingMac.mm
utils/win32/: CharEncodingWin32.cpp
